[Mac][Material Design] Fix indentation of first and last bookmark items.

A recent cl that adjusted bookmark bar layout changed the left and right
bookmark item indent to an incorrect value. This cl corrects that
mistake.

R=avi@chromium.org
BUG=640134

Review-Url: https://codereview.chromium.org/2293593002
Cr-Commit-Position: refs/heads/master@{#415125}

Former-commit-id: dfdafc14e9271e2d671bb5d4dd22de3d8067c9a6